--- a/doc/addons/stacks/functions/page.mdx
+++ b/doc/addons/stacks/functions/page.mdx
@@ -700,7 +700,7 @@ Coming soon - `stacks::cv_err` returns the given Clarity value wrapped in an `Er
 
 
 ```hcl {{ title: 'main.tx' }}
-action "my_tx" "stacks::send_contract_call" {
+action "my_tx" "stacks::call_contract" {
     contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.some-contract"
     function_name = "some-function"
     function_args = []
@@ -767,7 +767,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
 ```hcl {{ title: 'main.tx' }}
-action "my_tx" "stacks::send_contract_call" {
+action "my_tx" "stacks::call_contract" {
     contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.some-contract"
     function_name = "some-function"
     function_args = []
@@ -834,7 +834,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
 ```hcl {{ title: 'main.tx' }}
-action "my_tx" "stacks::send_contract_call" {
+action "my_tx" "stacks::call_contract" {
     contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.some-contract"
     function_name = "some-function"
     function_args = []
@@ -901,7 +901,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
 ```hcl {{ title: 'main.tx' }}
-action "my_tx" "stacks::send_contract_call" {
+action "my_tx" "stacks::call_contract" {
     contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.some-contract"
     function_name = "some-function"
     function_args = []
@@ -974,7 +974,7 @@ action "my_tx" "stacks::send_contract_call" {
 
 
 ```hcl {{ title: 'main.tx' }}
-action "my_tx" "stacks::send_contract_call" {
+action "my_tx" "stacks::call_contract" {
     contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.some-contract"
     function_name = "some-function"
     function_args = []
