--- a/doc/addons/stacks/actions/page.mdx
+++ b/doc/addons/stacks/actions/page.mdx
@@ -9,7 +9,7 @@ export const metadata = {
 
 ## sign_transaction {{ tag: 'action' }}
 
-The `stacks::sign_transaction` action signs an encoded transaction payload with the supplied wallet data.
+The `stacks::sign_transaction` action signs an encoded transaction payload with the supplied signer data.
 
 ### Inputs
 
@@ -32,7 +32,7 @@ The `stacks::sign_transaction` action signs an encoded transaction payload with 
 
 
   <Property name="signer" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction payload.
+    A reference to a signer construct, which will be used to sign the transaction payload.
   </Property>
 
 
@@ -43,6 +43,11 @@ The `stacks::sign_transaction` action signs an encoded transaction payload with 
 
   <Property name="fee" type="required">
     The transaction fee. This value will automatically be estimated if omitted.
+  </Property>
+
+
+  <Property name="fee_strategy" type="optional">
+    The strategy to use for automatically estimating fee ('low', 'medium', 'high'). Default to 'medium'.
   </Property>
 
 
@@ -185,25 +190,20 @@ When the `decode_call_contract` action is successfully executed, the following o
 
 ## deploy_contract {{ tag: 'action' }}
 
-The `deploy_contract` action encodes a contract deployment transaction, signs the transaction using a wallet, and broadcasts the signed transaction to the network.
+The `deploy_contract` action encodes a contract deployment transaction, signs the transaction using a signer, and broadcasts the signed transaction to the network.
 
 ### Inputs
 
 <Properties>
 
 
-  <Property name="source_code" type="required">
-    The code of the contract method to deploy.
+  <Property name="description" type="optional">
+    Description of the deployment
   </Property>
 
 
-  <Property name="contract_name" type="required">
-    The name of the contract to deploy.
-  </Property>
-
-
-  <Property name="clarity_version" type="optional">
-    The version of clarity to use (default: latest).
+  <Property name="contract" type="optional">
+    Contract informations.
   </Property>
 
 
@@ -212,8 +212,18 @@ The `deploy_contract` action encodes a contract deployment transaction, signs th
   </Property>
 
 
+  <Property name="rpc_api_url" type="optional">
+    The URL to use when making API requests.
+  </Property>
+
+
+  <Property name="rpc_api_auth_token" type="optional">
+    The HTTP authentication token to include in the headers when making API requests.
+  </Property>
+
+
   <Property name="signer" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction payload.
+    A reference to a signer construct, which will be used to sign the transaction payload.
   </Property>
 
 
@@ -234,6 +244,31 @@ The `deploy_contract` action encodes a contract deployment transaction, signs th
 
   <Property name="post_conditions" type="optional">
     The post conditions to include to the transaction.
+  </Property>
+
+
+  <Property name="post_condition_mode" type="optional">
+    The post condition mode ('allow', 'deny'). In Allow mode other asset transfers not covered by the post-conditions are permitted. In Deny mode no other asset transfers are permitted besides those named in the post-conditions.
+  </Property>
+
+
+  <Property name="transforms" type="optional">
+    An array of transform operations to perform on the contract source, before being its signature.
+  </Property>
+
+
+  <Property name="contracts_ids_dependencies" type="optional">
+    Contracts that are depending on this contract at their deployment.
+  </Property>
+
+
+  <Property name="contracts_ids_lazy_dependencies" type="optional">
+    Contracts that are depending on this contract after their deployment.
+  </Property>
+
+
+  <Property name="fee_strategy" type="optional">
+    The strategy to use for automatically estimating fee ('low', 'medium', 'high'). Default to 'medium'.
   </Property>
 
 
@@ -260,6 +295,11 @@ When the `deploy_contract` action is successfully executed, the following output
   </Property>
 
 
+  <Property name="contract_id">
+    The contract id.
+  </Property>
+
+
   <Property name="result">
     The transaction result.
   </Property>
@@ -275,10 +315,130 @@ action "counter_deployment" "stacks::deploy_contract" {
     description = "Deploy counter contract."
     source_code = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.pyth-oracle-v1"
     contract_name = "verify-and-update-price-feeds"
-    signer = wallet.alice
+    signer = signer.alice
 }
 output "contract_tx_id" {
-  value = action.counter_deployment.tx_id
+value = action.counter_deployment.tx_id
+}
+// > contract_tx_id: 0x1020321039120390239103193012909424854753848509019302931023849320
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
+## deploy_contract_requirement {{ tag: 'action' }}
+
+The `deploy_contract` action encodes a contract deployment transaction, signs the transaction using a signer, and broadcasts the signed transaction to the network.
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="description" type="optional">
+    Description of the deployment
+  </Property>
+
+
+  <Property name="contract_id" type="required">
+    The contract id deployed on Mainnet that needs to mirrored.
+  </Property>
+
+
+  <Property name="network_id" type="optional">
+    The network id used to validate the transaction version.
+  </Property>
+
+
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction payload.
+  </Property>
+
+
+  <Property name="confirmations" type="optional">
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+  </Property>
+
+
+  <Property name="nonce" type="optional">
+    The account nonce of the signer. This value will be retrieved from the network if omitted.
+  </Property>
+
+
+  <Property name="fee" type="optional">
+    The transaction fee. This value will automatically be estimated if omitted.
+  </Property>
+
+
+  <Property name="post_conditions" type="optional">
+    The post conditions to include to the transaction.
+  </Property>
+
+
+  <Property name="contracts_ids_dependencies" type="optional">
+    Contracts that are depending on this contract at their deployment.
+  </Property>
+
+
+  <Property name="contracts_ids_lazy_dependencies" type="optional">
+    Contracts that are depending on this contract after their deployment.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `deploy_contract_requirement` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="signed_transaction_bytes">
+    The signed transaction bytes.
+  </Property>
+
+
+  <Property name="tx_id">
+    The transaction id.
+  </Property>
+
+
+  <Property name="result">
+    The transaction result.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using deploy_contract_requirement">
+
+
+```hcl {{ title: 'main.tx' }}
+action "counter_deployment" "stacks::deploy_contract" {
+    description = "Deploy counter contract."
+    source_code = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.pyth-oracle-v1"
+    contract_name = "verify-and-update-price-feeds"
+    signer = signer.alice
+}
+output "contract_tx_id" {
+value = action.counter_deployment.tx_id
 }
 // > contract_tx_id: 0x1020321039120390239103193012909424854753848509019302931023849320
 
@@ -324,11 +484,6 @@ The `call_contract` action encodes a valid contract call payload and serializes 
 
   <Property name="network_id" type="optional">
     The network id used to validate the transaction version.
-  </Property>
-
-
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
   </Property>
 
 
@@ -413,8 +568,18 @@ The `broadcast_transaction` action sends a signed transaction payload to the spe
   </Property>
 
 
+  <Property name="network_id" type="optional">
+    The network id used to validate the transaction version.
+  </Property>
+
+
   <Property name="rpc_api_url" type="optional">
-    The URL of the Stacks API to broadcast to.
+    The URL to use when making API requests.
+  </Property>
+
+
+  <Property name="rpc_api_auth_token" type="optional">
+    The HTTP authentication token to include in the headers when making API requests.
   </Property>
 
 
@@ -448,6 +613,11 @@ When the `broadcast_transaction` action is successfully executed, the following 
 
   <Property name="result">
     The transaction result.
+  </Property>
+
+
+  <Property name="decoded_result">
+    The transaction decoded result.
   </Property>
 
 
@@ -510,8 +680,18 @@ The `call_readonly_fn` action queries a public readonly function.
   </Property>
 
 
+  <Property name="network_id" type="optional">
+    The network id used to validate the transaction version.
+  </Property>
+
+
   <Property name="rpc_api_url" type="optional">
-    The URL of the Stacks API to broadcast to.
+    The URL to use when making API requests.
+  </Property>
+
+
+  <Property name="rpc_api_auth_token" type="optional">
+    The HTTP authentication token to include in the headers when making API requests.
   </Property>
 
 
@@ -522,11 +702,6 @@ The `call_readonly_fn` action queries a public readonly function.
 
   <Property name="block_height" type="optional">
     Coming soon.
-  </Property>
-
-
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
   </Property>
 
 
@@ -573,7 +748,7 @@ When the `call_readonly_fn` action is successfully executed, the following outpu
 
 ## call_contract {{ tag: 'action' }}
 
-The `call_contract` action encodes a contract call transaction, signs the transaction using an in-browser wallet, and broadcasts the signed transaction to the network.
+The `call_contract` action encodes a contract call transaction, signs the transaction using an in-browser signer, and broadcasts the signed transaction to the network.
 
 ### Inputs
 
@@ -605,8 +780,18 @@ The `call_contract` action encodes a contract call transaction, signs the transa
   </Property>
 
 
+  <Property name="rpc_api_url" type="optional">
+    The URL to use when making API requests.
+  </Property>
+
+
+  <Property name="rpc_api_auth_token" type="optional">
+    The HTTP authentication token to include in the headers when making API requests.
+  </Property>
+
+
   <Property name="signer" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction payload.
+    A reference to a signer construct, which will be used to sign the transaction payload.
   </Property>
 
 
@@ -625,13 +810,18 @@ The `call_contract` action encodes a contract call transaction, signs the transa
   </Property>
 
 
+  <Property name="fee_strategy" type="optional">
+    The strategy to use for automatically estimating fee ('low', 'medium', 'high'). Default to 'medium'.
+  </Property>
+
+
   <Property name="post_conditions" type="optional">
     The post conditions to include to the transaction.
   </Property>
 
 
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
+  <Property name="post_condition_mode" type="optional">
+    The post condition mode ('allow', 'deny'). In Allow mode other asset transfers not covered by the post-conditions are permitted. In Deny mode no other asset transfers are permitted besides those named in the post-conditions.
   </Property>
 
 
@@ -686,7 +876,7 @@ action "my_ref" "stacks::call_contract" {
             "wormhole-core-contract": stacks::cv_principal("${env.pyth_deployer}.wormhole-core-v1")
         })
     ]
-    signer = wallet.alice
+    signer = signer.alice
 }            
 output "tx_id" {
 value = action.my_ref.tx_id
@@ -715,7 +905,7 @@ value = action.my_ref.result
 
 ## send_stx {{ tag: 'action' }}
 
-The `send_stx` action encodes a STX transfer transaction, signs the transaction using a wallet, and broadcasts the signed transaction to the network.
+The `send_stx` action encodes a STX transfer transaction, signs the transaction using a signer, and broadcasts the signed transaction to the network.
 
 ### Inputs
 
@@ -737,8 +927,18 @@ The `send_stx` action encodes a STX transfer transaction, signs the transaction 
   </Property>
 
 
+  <Property name="rpc_api_url" type="optional">
+    The URL to use when making API requests.
+  </Property>
+
+
+  <Property name="rpc_api_auth_token" type="optional">
+    The HTTP authentication token to include in the headers when making API requests.
+  </Property>
+
+
   <Property name="signer" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction payload.
+    A reference to a signer construct, which will be used to sign the transaction payload.
   </Property>
 
 
@@ -796,7 +996,7 @@ action "stx_transfer" "stacks::send_stx" {
     recipient = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM"
     amount = 1000000
     memo = "0x10394390"
-    signer = wallet.alice
+    signer = signer.alice
 }            
 output "transfer_tx_id" {
     value = action.stx_transfer.tx_id
