--- a/doc/addons/std/functions/operators/page.mdx
+++ b/doc/addons/std/functions/operators/page.mdx
@@ -126,12 +126,12 @@ output "my_bool" {
 ---
 
 
-## div_int {{ tag: 'function' }}
+## div {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`div_int` returns the integer division of the left-hand-side argument by the right-hand-side argument, rounding any remainder down to the nearest integer.
+`div` returns the integer division of the left-hand-side argument by the right-hand-side argument, rounding any remainder down to the nearest integer.
 
 ### Inputs
 
@@ -159,7 +159,7 @@ output "my_bool" {
 </Properties>
 
 
-<CodeGroup title="Example using div_int">
+<CodeGroup title="Example using div">
 
 
 ```hcl {{ title: 'main.tx' }}
@@ -167,66 +167,6 @@ output "my_int" {
   value = 11 / -3
 }
 // > my_int: -3
-
-```
-
-
-```json {{ title: 'main.json' }}
-// Coming soon
-```
-
-```yaml {{ title: 'main.yaml' }}
-# Coming soon
-```
-
-</CodeGroup>
-</Col>
-</Row>
-
----
-
-
-## div_uint {{ tag: 'function' }}
-
-<Row>
-  <Col>
-
-`div_int` returns the integer division of the left-hand-side argument by the right-hand-side argument, rounding any remainder down to the nearest integer.
-
-### Inputs
-
-<Properties>
-
-
-  <Property name="lhs">
-    The `uint` dividend.
-  </Property>
-
-
-  <Property name="rhs">
-    The `uint` divisor.
-  </Property>
-
-
-</Properties>
-
-### Output
-
-<Properties>
-  <Property name="value">
-    The result of dividing the dividend by the divisor.
-  </Property>
-</Properties>
-
-
-<CodeGroup title="Example using div_uint">
-
-
-```hcl {{ title: 'main.tx' }}
-output "my_uint" { 
-  value = 11 / 3
-}
-// > my_uint: 3
 
 ```
 
@@ -259,12 +199,12 @@ output "my_uint" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -319,12 +259,12 @@ output "is_eq" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -379,12 +319,12 @@ output "is_gt" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -439,12 +379,12 @@ output "is_gte" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -499,12 +439,12 @@ output "is_lt" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -559,12 +499,12 @@ output "is_lte" {
 
 
   <Property name="lhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
   <Property name="rhs">
-    An `int`, `uint`, `float`, `string`, `boolean` or `null` value.
+    An `integer`, `float`, `string`, `boolean` or `null` value.
   </Property>
 
 
@@ -606,12 +546,12 @@ output "is_neq" {
 ---
 
 
-## minus_uint {{ tag: 'function' }}
+## minus {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`minus_uint` returns the result of subtracting the right-hand-side `uint` argument from the left-hand-side `uint` argument.
+`minus` returns the result of subtracting the right-hand-side `integer` argument from the left-hand-side `integer` argument.
 
 ### Inputs
 
@@ -619,12 +559,12 @@ output "is_neq" {
 
 
   <Property name="lhs">
-    The `uint` minuend.
+    The `integer` minuend.
   </Property>
 
 
   <Property name="rhs">
-    The `uint` subtrahend.
+    The `integer` subtrahend.
   </Property>
 
 
@@ -639,14 +579,14 @@ output "is_neq" {
 </Properties>
 
 
-<CodeGroup title="Example using minus_uint">
+<CodeGroup title="Example using minus">
 
 
 ```hcl {{ title: 'main.tx' }}
-output "my_uint" { 
+output "my_integer" { 
   value = 10 - 6
 }
-// > my_uint: 4
+// > my_integer: 4
 
 ```
 
@@ -666,12 +606,12 @@ output "my_uint" {
 ---
 
 
-## modulo_uint {{ tag: 'function' }}
+## modulo {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`modulo_uint` returns the remainder of dividing the left-hand-side `uint` argument by the right-hand-side `uint` argument.
+`modulo` returns the remainder of dividing the left-hand-side `integer` argument by the right-hand-side `integer` argument.
 
 ### Inputs
 
@@ -679,12 +619,12 @@ output "my_uint" {
 
 
   <Property name="lhs">
-    The `uint` dividend.
+    The `integer` dividend.
   </Property>
 
 
   <Property name="rhs">
-    The `uint` divisor.
+    The `integer` divisor.
   </Property>
 
 
@@ -699,7 +639,7 @@ output "my_uint" {
 </Properties>
 
 
-<CodeGroup title="Example using modulo_uint">
+<CodeGroup title="Example using modulo">
 
 
 ```hcl {{ title: 'main.tx' }}
@@ -726,12 +666,12 @@ output "my_mod" {
 ---
 
 
-## multiply_uint {{ tag: 'function' }}
+## multiply {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`multiply_uint` returns the product of the left-hand-side `uint` argument and the right-hand-side `uint` argument.
+`multiply` returns the product of the left-hand-side `integer` argument and the right-hand-side `integer` argument.
 
 ### Inputs
 
@@ -739,12 +679,12 @@ output "my_mod" {
 
 
   <Property name="lhs">
-    The first `uint` operand.
+    The first `integer` operand.
   </Property>
 
 
   <Property name="rhs">
-    The second `uint` operand.
+    The second `integer` operand.
   </Property>
 
 
@@ -759,7 +699,7 @@ output "my_mod" {
 </Properties>
 
 
-<CodeGroup title="Example using multiply_uint">
+<CodeGroup title="Example using multiply">
 
 
 ```hcl {{ title: 'main.tx' }}
@@ -786,12 +726,12 @@ output "my_product" {
 ---
 
 
-## add_uint {{ tag: 'function' }}
+## add {{ tag: 'function' }}
 
 <Row>
   <Col>
 
-`add_uint` returns the sum of the left-hand-side `uint` argument and the right-hand-side `uint` argument.
+`add` returns the sum of the left-hand-side `integer` argument and the right-hand-side `integer` argument.
 
 ### Inputs
 
@@ -799,12 +739,12 @@ output "my_product" {
 
 
   <Property name="lhs">
-    The first `uint` operand.
+    The first `integer` operand.
   </Property>
 
 
   <Property name="rhs">
-    The second `uint` operand.
+    The second `integer` operand.
   </Property>
 
 
@@ -819,7 +759,7 @@ output "my_product" {
 </Properties>
 
 
-<CodeGroup title="Example using add_uint">
+<CodeGroup title="Example using add">
 
 
 ```hcl {{ title: 'main.tx' }}
