--- a/doc/addons/evm/actions/page.mdx
+++ b/doc/addons/evm/actions/page.mdx
@@ -9,7 +9,7 @@ export const metadata = {
 
 ## sign_transfer {{ tag: 'action' }}
 
-The `evm::sign_transfer` action encodes an ETH transfer transaction, signs it with the provided wallet data, and broadcasts it to the network.
+The `evm::sign_transfer` action encodes an ETH transfer transaction, signs it with the provided signer data, and broadcasts it to the network.
 
 ### Inputs
 
@@ -21,8 +21,8 @@ The `evm::sign_transfer` action encodes an ETH transfer transaction, signs it wi
   </Property>
 
 
-  <Property name="from" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction.
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction.
   </Property>
 
 
@@ -76,11 +76,6 @@ The `evm::sign_transfer` action encodes an ETH transfer transaction, signs it wi
   </Property>
 
 
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
-  </Property>
-
-
 </Properties>
 
 ### Outputs
@@ -125,7 +120,7 @@ When the `sign_transfer` action is successfully executed, the following outputs 
 
 ## sign_contract_call {{ tag: 'action' }}
 
-The `evm::sign_contract_call` action encodes a contract call transaction, signs it with the provided wallet data, and broadcasts it to the network.
+The `evm::sign_contract_call` action encodes a contract call transaction, signs it with the provided signer data, and broadcasts it to the network.
 
 ### Inputs
 
@@ -142,8 +137,8 @@ The `evm::sign_contract_call` action encodes a contract call transaction, signs 
   </Property>
 
 
-  <Property name="from" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction.
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction.
   </Property>
 
 
@@ -204,11 +199,6 @@ The `evm::sign_contract_call` action encodes a contract call transaction, signs 
 
   <Property name="gas_price" type="optional">
     Sets the gas price for Legacy transactions.
-  </Property>
-
-
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
   </Property>
 
 
@@ -288,12 +278,12 @@ The `evm::eth_call` command simulates an Ethereum transaction using the `eth_cal
   </Property>
 
 
-  <Property name="from" type="required">
+  <Property name="signer" type="required">
     The address that will be used as the sender of this contract call.
   </Property>
 
 
-  <Property name="function_name" type="required">
+  <Property name="function_name" type="optional">
     The contract function to call.
   </Property>
 
@@ -340,11 +330,6 @@ The `evm::eth_call` command simulates an Ethereum transaction using the `eth_cal
 
   <Property name="gas_price" type="optional">
     Sets the gas price for Legacy transactions.
-  </Property>
-
-
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
   </Property>
 
 
@@ -397,7 +382,7 @@ action "call_some_contract" "evm::eth_call" {
 
 ## deploy_contract {{ tag: 'action' }}
 
-The `evm::deploy_contract` action encodes a contract deployment transaction, signs it with the provided wallet data, and broadcasts it to the network.
+The `evm::deploy_contract` action encodes a contract deployment transaction, signs it with the provided signer data, and broadcasts it to the network.
 
 ### Inputs
 
@@ -409,18 +394,13 @@ The `evm::deploy_contract` action encodes a contract deployment transaction, sig
   </Property>
 
 
-  <Property name="rpc_api_url" type="required">
+  <Property name="rpc_api_url" type="optional">
     The URL of the EVM API used to broadcast the transaction.
   </Property>
 
 
-  <Property name="from" type="required">
-    A reference to a wallet construct, which will be used to sign the transaction.
-  </Property>
-
-
-  <Property name="init_code" type="required">
-    The contract init_code to deploy
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction.
   </Property>
 
 
@@ -464,8 +444,28 @@ The `evm::deploy_contract` action encodes a contract deployment transaction, sig
   </Property>
 
 
-  <Property name="depends_on" type="optional">
-    References another command's outputs, preventing this command from executing until the referenced command is successful.
+  <Property name="contract" type="required">
+    Coming soon
+  </Property>
+
+
+  <Property name="constructor_args" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="confirmations" type="optional">
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+  </Property>
+
+
+  <Property name="verify" type="optional">
+    
+  </Property>
+
+
+  <Property name="block_explorer_api_key" type="optional">
+    The URL of the block explorer used to verify the contract.
   </Property>
 
 
@@ -493,144 +493,7 @@ When the `deploy_contract` action is successfully executed, the following output
 
 
 ```hcl {{ title: 'main.tx' }}
-actions "deploy" "evm::deploy_contract" {
-    init_code = action.artifacts.init_code
-    from = wallet.alice
-}
-
-```
-
-
-```json {{ title: 'main.json' }}
 // Coming soon
-```
-
-```yaml {{ title: 'main.yaml' }}
-# Coming soon
-```
-
-</CodeGroup>
-
----
-
-
-## get_forge_deployment_artifacts {{ tag: 'action' }}
-
-The `evm::get_forge_deployment_artifacts` command gets all artifacts from a forge project that are required for deploying and verifying a contract.
-
-### Inputs
-
-<Properties>
-
-
-  <Property name="description" type="optional">
-    A description of the deployment artifacts.
-  </Property>
-
-
-  <Property name="foundry_toml_path" type="required">
-    The path to the Foundry project's `foundry.toml` file.
-  </Property>
-
-
-  <Property name="foundry_profile" type="optional">
-    The profile to use from the `foundry.toml` file. The default is `default`.
-  </Property>
-
-
-  <Property name="contract_filename" type="required">
-    The name of the contract file that contains the contract being deployed, without the file extension. For example, the contract file `SimpleStorage.sol` should be `SimpleStorage`.
-  </Property>
-
-
-  <Property name="contract_name" type="optional">
-    The name of the contract being deployed. If omitted, the `contract_filename` argument will be used.
-  </Property>
-
-
-  <Property name="constructor_args" type="optional">
-    The constructor args to initialize a contract requiring constructor arguments.
-  </Property>
-
-
-</Properties>
-
-### Outputs
-
-<Note>
-
-When the `get_forge_deployment_artifacts` action is successfully executed, the following outputs are attached to the action
-
-</Note>
-
-<Properties>
-
-
-  <Property name="abi">
-    The contract abi.
-  </Property>
-
-
-  <Property name="bytecode">
-    The compiled contract bytecode.
-  </Property>
-
-
-  <Property name="constructor_args">
-    The abi encoded constructor arguments, if provided.
-  </Property>
-
-
-  <Property name="init_code">
-    The compiled contract bytecode concatenated with the abi encoded constructor arguments, if provided.
-  </Property>
-
-
-  <Property name="source">
-    The contract source code.
-  </Property>
-
-
-  <Property name="compiler_version">
-    The solc version used to compile the contract.
-  </Property>
-
-
-  <Property name="contract_name">
-    The name of the contract being deployed.
-  </Property>
-
-
-  <Property name="optimizer_enabled">
-    Whether the optimizer is enabled during contract compilation.
-  </Property>
-
-
-  <Property name="optimizer_runs">
-    The number of runs the optimizer performed.
-  </Property>
-
-
-  <Property name="evm_version">
-    The EVM version used to compile the contract.
-  </Property>
-
-
-  <Property name="value">
-    The other outputs as one object.
-  </Property>
-
-
-</Properties>
-
-<CodeGroup title="Example using get_forge_deployment_artifacts">
-
-
-```hcl {{ title: 'main.tx' }}
-action "artifacts" "evm::get_forge_deployment_artifacts" {
-    foundry_toml_path = "/path/to/foundry.toml"
-    contract_filename = "SimpleStorage"
-}
 
 ```
 
@@ -673,8 +536,6 @@ The `evm::verify_contract` action sends the required contract deployment artifac
     {
         "abi": String,
         "bytecode": String,
-        "init_code": String,
-        "constructor_args": String,
         "source": String,
         "compiler_version": String,
         "contract_name": String,
@@ -751,6 +612,11 @@ The `evm::check_confirmations` action polls the network until the provided `tx_h
   </Property>
 
 
+  <Property name="chain_id" type="required">
+    Coming soon
+  </Property>
+
+
   <Property name="confirmations" type="optional">
     Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
   </Property>
@@ -784,6 +650,233 @@ action "confirm_deployment" "evm::check_confirmations" {
     tx_hash = action.some_deploying_action.tx_hash
     confirmations = 1
 }
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
+## sign_transaction {{ tag: 'action' }}
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="description" type="optional">
+    A description of the transaction
+  </Property>
+
+
+  <Property name="transaction_payload_bytes" type="required">
+    The unsigned transaction payload bytes.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `sign_transaction` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="tx_hash">
+    The hash of the transaction.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using sign_transaction">
+
+
+```hcl {{ title: 'main.tx' }}
+// Coming soon
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
+## deploy_contract_create2 {{ tag: 'action' }}
+
+Coming soon
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="description" type="optional">
+    A description of the transaction
+  </Property>
+
+
+  <Property name="rpc_api_url" type="optional">
+    The URL of the EVM API used to broadcast the transaction.
+  </Property>
+
+
+  <Property name="signer" type="required">
+    A reference to a signer construct, which will be used to sign the transaction.
+  </Property>
+
+
+  <Property name="create2_factory_address" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="create2_factory_abi" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="create2_factory_function_name" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="create2_factory_function_args" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="amount" type="optional">
+    The amount, in WEI, to send with the deployment.
+  </Property>
+
+
+  <Property name="type" type="optional">
+    The transaction type. Options are 'Legacy', 'EIP2930', 'EIP1559', 'EIP4844'. The default is 'EIP1559'.
+  </Property>
+
+
+  <Property name="max_fee_per_gas" type="optional">
+    Sets the max fee per gas of an EIP1559 transaction.
+  </Property>
+
+
+  <Property name="max_priority_fee_per_gas" type="optional">
+    Sets the max priority fee per gas of an EIP1559 transaction.
+  </Property>
+
+
+  <Property name="chain_id" type="optional">
+    The chain id.
+  </Property>
+
+
+  <Property name="nonce" type="optional">
+    The account nonce of the signer. This value will be retrieved from the network if omitted.
+  </Property>
+
+
+  <Property name="gas_limit" type="optional">
+    Sets the maximum amount of gas that should be used to execute this transaction.
+  </Property>
+
+
+  <Property name="gas_price" type="optional">
+    Sets the gas price for Legacy transactions.
+  </Property>
+
+
+  <Property name="contract" type="required">
+    Coming soon
+  </Property>
+
+
+  <Property name="constructor_args" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="expected_contract_address" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="salt" type="optional">
+    Coming soon
+  </Property>
+
+
+  <Property name="confirmations" type="optional">
+    Once the transaction is included on a block, the number of blocks to await before the transaction is considered successful and Runbook execution continues.
+  </Property>
+
+
+  <Property name="verify" type="optional">
+    
+  </Property>
+
+
+  <Property name="block_explorer_api_key" type="optional">
+    The URL of the block explorer used to verify the contract.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `deploy_contract_create2` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="tx_hash">
+    The hash of the transaction.
+  </Property>
+
+
+  <Property name="contract_address">
+    The address of the deployed transaction.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using deploy_contract_create2">
+
+
+```hcl {{ title: 'main.tx' }}
+// Coming soon
 
 ```
 
