--- a/doc/addons/evm/overview/page.mdx
+++ b/doc/addons/evm/overview/page.mdx
@@ -7,4 +7,4 @@ export const metadata = {
 
 The EVM `txtx` plugin enables building Runbooks that interact with Ethereum and EVM compatible blockchains. 
 The plugin provides utility functions that allow you to encode data in the proper RLP format that is required by contracts on EVM compatible blockchains.
-The actions can be used to create valid transfer, contract call, and contract deployment transactions that can be signed via a mnemonic phrase or via your browser wallet. 
+The actions can be used to create valid transfer, contract call, and contract deployment transactions that can be signed via a mnemonic phrase or via your browser signer. 
