--- a/doc/addons/stacks/signers/page.mdx
+++ b/doc/addons/stacks/signers/page.mdx
@@ -120,7 +120,7 @@ When the `connect` action is successfully executed, the following outputs are at
 
 
 ```hcl {{ title: 'main.tx' }}
-signer "alice" "stacks::connect" {
+signer "alice" "stacks::web_wallet" {
     expected_address = "ST12886CEM87N4TP9CGV91VWJ8FXVX57R6AG1AXS4"
 }
 
@@ -189,11 +189,11 @@ When the `multisig` action is successfully executed, the following outputs are a
 
 
 ```hcl {{ title: 'main.tx' }}
-signer "alice" "stacks::connect" {
+signer "alice" "stacks::web_wallet" {
     expected_address = "ST2JHG361ZXG51QTKY2NQCVBPPRRE2KZB1HR05NNC"
 }
 
-signer "bob" "stacks::connect" {
+signer "bob" "stacks::web_wallet" {
     expected_address = "ST2NEB84ASENDXKYGJPQW86YXQCEFEX2ZQPG87ND"
 }
 
