chore: update doc

--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -9,7 +9,7 @@ export const metadata = {
 
 ## mnemonic {{ tag: 'signer' }}
 
-The `evm::mnemonic` signer can be used to synchronously sign a transaction.
+The `evm::secret_key` signer can be used to synchronously sign a transaction.
 
 ### Inputs
 
@@ -65,7 +65,7 @@ When the `mnemonic` action is successfully executed, the following outputs are a
 
 
 ```hcl {{ title: 'main.tx' }}
-signer "bob" "evm::mnemonic" {
+signer "bob" "evm::secret_key" {
     mnemonic = "board list obtain sugar hour worth raven scout denial thunder horse logic fury scorpion fold genuine phrase wealth news aim below celery when cabin"
     derivation_path = "m/44'/5757'/0'/0/0"
 }
