--- a/doc/addons/stacks/signers/page.mdx
+++ b/doc/addons/stacks/signers/page.mdx
@@ -60,7 +60,7 @@ When the `mnemonic` action is successfully executed, the following outputs are a
 
 
 ```hcl {{ title: 'main.tx' }}
-signer "bob" "stacks::mnemonic" {
+signer "bob" "stacks::secret_key" {
     mnemonic = "board list obtain sugar hour worth raven scout denial thunder horse logic fury scorpion fold genuine phrase wealth news aim below celery when cabin"
     derivation_path = "m/44'/5757'/0'/0/0"
 }
