--- a/doc/addons/stacks.mdx
+++ b/doc/addons/stacks.mdx
@@ -1307,7 +1307,7 @@ When the `mnemonic` action is successfully executed, the following outputs are a
 
 
 ```hcl {{ title: 'main.tx' }}
-wallet "bob" "stacks::mnemonic" {
+wallet "bob" "stacks::secret_key" {
     mnemonic = "board list obtain sugar hour worth raven scout denial thunder horse logic fury scorpion fold genuine phrase wealth news aim below celery when cabin"
     derivation_path = "m/44'/5757'/0'/0/0"
 }
