--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -7,7 +7,7 @@ export const metadata = {
 
 
 
-## mnemonic {{ tag: 'signer' }}
+## secret_key {{ tag: 'signer' }}
 
 The `evm::secret_key` signer can be used to synchronously sign a transaction.
 
@@ -16,13 +16,18 @@ The `evm::secret_key` signer can be used to synchronously sign a transaction.
 <Properties>
 
 
+  <Property name="secret_key" type="">
+    The secret key used to sign messages and transactions.
+  </Property>
+
+
   <Property name="mnemonic" type="">
-    The mnemonic phrase used to generate the secret key.
+    The mnemonic phrase used to generate the secret key. This input will not be used if the `secret_key` input is provided.
   </Property>
 
 
   <Property name="derivation_path" type="">
-    The derivation path used to generate the secret key.
+    The derivation path used to generate the secret key. This input will not be used if the `secret_key` input is provided.
   </Property>
 
 
@@ -42,7 +47,7 @@ The `evm::secret_key` signer can be used to synchronously sign a transaction.
 
 <Note>
 
-When the `mnemonic` action is successfully executed, the following outputs are attached to the action
+When the `secret_key` action is successfully executed, the following outputs are attached to the action
 
 </Note>
 
@@ -61,13 +66,72 @@ When the `mnemonic` action is successfully executed, the following outputs are a
 
 </Properties>
 
-<CodeGroup title="Example using mnemonic">
+<CodeGroup title="Example using secret_key">
 
 
 ```hcl {{ title: 'main.tx' }}
 signer "bob" "evm::secret_key" {
     mnemonic = "board list obtain sugar hour worth raven scout denial thunder horse logic fury scorpion fold genuine phrase wealth news aim below celery when cabin"
     derivation_path = "m/44'/5757'/0'/0/0"
+}
+
+```
+
+
+```json {{ title: 'main.json' }}
+// Coming soon
+```
+
+```yaml {{ title: 'main.yaml' }}
+# Coming soon
+```
+
+</CodeGroup>
+
+---
+
+
+## web_wallet {{ tag: 'signer' }}
+
+The `web_wallet` signer will route the transaction signing process through [wagmi](https://wagmi.sh/).
+This allows a Runbook operator to sign the transaction with the browser signer of their choice.
+
+### Inputs
+
+<Properties>
+
+
+  <Property name="expected_address" type="">
+    The EVM address that is expected to connect to the Runbook execution. Omitting this field will allow any address to be used for this signer.
+  </Property>
+
+
+</Properties>
+
+### Outputs
+
+<Note>
+
+When the `web_wallet` action is successfully executed, the following outputs are attached to the action
+
+</Note>
+
+<Properties>
+
+
+  <Property name="address">
+    The address of the account generated from the public key.
+  </Property>
+
+
+</Properties>
+
+<CodeGroup title="Example using web_wallet">
+
+
+```hcl {{ title: 'main.tx' }}
+signer "alice" "evm::web_wallet" {
+    expected_address = "0xCe246168E59dd8e28e367BB49b38Dc621768F425"
 }
 
 ```
