docs: update generated docs

--- a/doc/addons/stacks.mdx
+++ b/doc/addons/stacks.mdx
@@ -577,7 +577,7 @@ The `sign_transaction` action signs an encoded transaction payload with the supp
 
 
   <Property name="network_id" type="optional">
-    The network id, which is used to set the transaction version. Can be `"testnet"` or `"mainnet"`.
+    The network id, which is used to set the transaction version. Valid values are `"testnet"` or `"mainnet"`.
   </Property>
 
 
