--- a/doc/addons/stacks/signers/page.mdx
+++ b/doc/addons/stacks/signers/page.mdx
@@ -93,7 +93,7 @@ signer "bob_again" "stacks::secret_key" {
 
 ## web_wallet {{ tag: 'signer' }}
 
-The `web_wallet` signer will route the transaction signing process through [Stacks.js connect](https://www.hiro.so/stacks-js).
+The `stacks::web_wallet` signer will route the transaction signing process through [Stacks.js connect](https://www.hiro.so/stacks-js).
 This allows a Runbook operator to sign the transaction with the browser signer of their choice.
 
 ### Inputs
