--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -98,7 +98,7 @@ signer "bob_again" "evm::secret_key" {
 
 ## web_wallet {{ tag: 'signer' }}
 
-The `web_wallet` signer will route the transaction signing process through [wagmi](https://wagmi.sh/).
+The `evm::web_wallet` signer will route the transaction signing process through [wagmi](https://wagmi.sh/).
 This allows a Runbook operator to sign the transaction with the browser signer of their choice.
 
 ### Inputs
