chore: update addons version

--- a/doc/addons/stacks/actions/page.mdx
+++ b/doc/addons/stacks/actions/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain (beta) Actions",
-    description: "Actions for Stacks Blockchain (beta)",
+    title: "Stacks Blockchain (rc1) Actions",
+    description: "Actions for Stacks Blockchain (rc1)",
 };
 
-# Stacks Blockchain (beta) Actions {{ id: "stacks-actions" }}
+# Stacks Blockchain (rc1) Actions {{ id: "stacks-actions" }}
 
 
 
