chore: update docs

--- a/doc/addons/evm/actions/page.mdx
+++ b/doc/addons/evm/actions/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Ethereum and EVM Compatible Blockchains (beta) Actions",
-    description: "Actions for Ethereum and EVM Compatible Blockchains (beta)",
+    title: "Ethereum and EVM Compatible Blockchains (alpha) Actions",
+    description: "Actions for Ethereum and EVM Compatible Blockchains (alpha)",
 };
 
-# Ethereum and EVM Compatible Blockchains (beta) Actions {{ id: "evm-actions" }}
+# Ethereum and EVM Compatible Blockchains (alpha) Actions {{ id: "evm-actions" }}
 
 
 
