--- a/doc/addons/evm/functions/page.mdx
+++ b/doc/addons/evm/functions/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Ethereum and EVM Compatible Blockchains (beta) Functions",
-    description: "Functions for Ethereum and EVM Compatible Blockchains (beta)",
+    title: "Ethereum and EVM Compatible Blockchains (alpha) Functions",
+    description: "Functions for Ethereum and EVM Compatible Blockchains (alpha)",
 };
 
-# Ethereum and EVM Compatible Blockchains (beta) Functions {{ id: "evm-functions" }}
+# Ethereum and EVM Compatible Blockchains (alpha) Functions {{ id: "evm-functions" }}
 
 
 ## address {{ tag: 'function' }}
