--- a/doc/addons/evm/overview/page.mdx
+++ b/doc/addons/evm/overview/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Ethereum and EVM Compatible Blockchains (beta)",
-    description: "Add-on for Ethereum and EVM Compatible Blockchains (beta)",
+    title: "Ethereum and EVM Compatible Blockchains (alpha)",
+    description: "Add-on for Ethereum and EVM Compatible Blockchains (alpha)",
 };
 
-# Ethereum and EVM Compatible Blockchains (beta) {{ id: "evm-constructs" }}
+# Ethereum and EVM Compatible Blockchains (alpha) {{ id: "evm-constructs" }}
 
 The EVM `txtx` plugin enables building Runbooks that interact with Ethereum and EVM compatible blockchains. 
 The plugin provides utility functions that allow you to encode data in the proper RLP format that is required by contracts on EVM compatible blockchains.
