--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Ethereum and EVM Compatible Blockchains (beta) Signers",
-    description: "Signers for Ethereum and EVM Compatible Blockchains (beta)",
+    title: "Ethereum and EVM Compatible Blockchains (alpha) Signers",
+    description: "Signers for Ethereum and EVM Compatible Blockchains (alpha)",
 };
 
-# Ethereum and EVM Compatible Blockchains (beta) Signers {{ id: "evm-signers" }}
+# Ethereum and EVM Compatible Blockchains (alpha) Signers {{ id: "evm-signers" }}
 
 
 
