chore: update docs

--- a/doc/addons/stacks/functions/page.mdx
+++ b/doc/addons/stacks/functions/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain (beta) Functions",
-    description: "Functions for Stacks Blockchain (beta)",
+    title: "Stacks Blockchain (RC1) Functions",
+    description: "Functions for Stacks Blockchain (RC1)",
 };
 
-# Stacks Blockchain (beta) Functions {{ id: "stacks-functions" }}
+# Stacks Blockchain (RC1) Functions {{ id: "stacks-functions" }}
 
 
 ## cv_some {{ tag: 'function' }}
