--- a/doc/addons/stacks/overview/page.mdx
+++ b/doc/addons/stacks/overview/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain (beta)",
-    description: "Add-on for Stacks Blockchain (beta)",
+    title: "Stacks Blockchain (RC1)",
+    description: "Add-on for Stacks Blockchain (RC1)",
 };
 
-# Stacks Blockchain (beta) {{ id: "stacks-constructs" }}
+# Stacks Blockchain (RC1) {{ id: "stacks-constructs" }}
 
 The Stacks `txtx` plugin enables building Runbooks that interact with the Stacks blockchain. 
 The plugin provides utility functions that allow you to encode data in the proper Clarity format that is required by contracts on the Stacks blockchain.
