--- a/doc/addons/stacks/signers/page.mdx
+++ b/doc/addons/stacks/signers/page.mdx
@@ -1,9 +1,9 @@
 export const metadata = {
-    title: "Stacks Blockchain (beta) Signers",
-    description: "Signers for Stacks Blockchain (beta)",
+    title: "Stacks Blockchain (RC1) Signers",
+    description: "Signers for Stacks Blockchain (RC1)",
 };
 
-# Stacks Blockchain (beta) Signers {{ id: "stacks-signers" }}
+# Stacks Blockchain (RC1) Signers {{ id: "stacks-signers" }}
 
 
 
